--- a/.github/workflows/publishAppServiceAcr.yml
+++ b/.github/workflows/publishAppServiceAcr.yml
@@ -1,13 +1,13 @@
-#name: Caller workflow publish App Service Plan
+name: Caller workflow publish App Service Plan
 
-#on: [push]
+on: [push]
 
-#jobs:
-#  publish:
-#    uses: ./.github/workflows/reusablePublishWorkflow.yml
-#    with:
-#      MODULE_NAME: appserviceplan
-#      MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
-#      MODULE_FILE_PATH: ./modules/appServicePlan.bicep 
-#      MODULE_METADATA_FILE_PATH: metadata.json
-#    secrets: inherit
+jobs:
+  publish:
+    uses: ./.github/workflows/reusablePublishWorkflow.yml
+    with:
+      MODULE_NAME: appserviceplan
+      MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
+      MODULE_FILE_PATH: ./modules/appServicePlan.bicep 
+      MODULE_METADATA_FILE_PATH: metadata.json
+    secrets: inherit
