--- a/.github/workflows/publishSqlDBServerAcr.yml
+++ b/.github/workflows/publishSqlDBServerAcr.yml
@@ -1,16 +1,16 @@
-#name: Caller workflow publish SQL DB 
+name: Caller workflow publish SQL DB 
 
-#on: [push]
+on: [push]
 
-#jobs:
-#  publish:
-#    uses: ./.github/workflows/reusablePublishWorkflow.yml
-#    with:
-#      MODULE_NAME: sqldatabase
-#      MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
-#      MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
-#      MODULE_METADATA_FILE_PATH: metadata.json
-#    secrets: inherit
+jobs:
+  publish:
+    uses: ./.github/workflows/reusablePublishWorkflow.yml
+    with:
+      MODULE_NAME: sqldatabase
+      MODULE_REGISTRY_SERVER: avanadeBicepContainerRegistry.azurecr.io
+      MODULE_FILE_PATH: ./modules/sqlDatabase.bicep 
+      MODULE_METADATA_FILE_PATH: metadata.json
+    secrets: inherit
 
    
 
