--- a/.github/workflows/reusableDeployBicepFileWorkflow.yml
+++ b/.github/workflows/reusableDeployBicepFileWorkflow.yml
@@ -14,6 +14,7 @@ jobs:
   validate:
      runs-on: ubuntu-latest
      steps:
+     - uses: actions/checkout@v2
      - uses: azure/login@v1
        with: 
         creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
