--- a/.github/workflows/reusableDeployBicepFileWorkflow.yml
+++ b/.github/workflows/reusableDeployBicepFileWorkflow.yml
@@ -17,7 +17,7 @@ jobs:
      - uses: actions/checkout@v2
      - uses: azure/login@v1
        with: 
-        secrets: inherit
+        creds: inherit
        env: ${{ inputs.environmentType }}
 
      - if: inputs.environmentType == 'prod'
@@ -46,7 +46,7 @@ jobs:
       # log into azure
     - uses: azure/login@v1
       with: # set azure credentials secret as an input
-       secrets: inherit
+       creds: inherit
       env: ${{ inputs.environmentType }}
 
     - uses: azure/arm-deploy@v1
