--- a/.github/workflows/reusableDeployBicepFileWorkflow.yml
+++ b/.github/workflows/reusableDeployBicepFileWorkflow.yml
@@ -9,11 +9,6 @@ on:
       resourceGroupName:
         required: true
         type: string
-    secrets:
-      dev_secret:
-        required: true
-      prod_secret:
-        required: true
 
 jobs:
   validate:
@@ -22,8 +17,9 @@ jobs:
      - uses: actions/checkout@v2
      - uses: azure/login@v1
        with: 
-        creds: inherit
-       env: ${{ inputs.environmentType }}
+        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
+       env: 
+        creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
 
      - if: inputs.environmentType == 'prod'
        uses: azure/arm-deploy@v1
@@ -51,8 +47,9 @@ jobs:
       # log into azure
     - uses: azure/login@v1
       with: # set azure credentials secret as an input
-       creds: inherit
-      env: ${{ inputs.environmentType }}
+       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
+      env: # or as an environment variable
+       creds: ${{ secrets.AZURE_CREDENTIALS_CLIENT }}
 
     - uses: azure/arm-deploy@v1
       with: 
