--- a/.github/workflows/reusablePublishWorkflow.yml
+++ b/.github/workflows/reusablePublishWorkflow.yml
@@ -58,8 +58,8 @@ jobs:
       with:
         inlineScript: |      
           az config set bicep.use_binary_from_path=False.
-          az bicep install 
+          az bicep install --version 0.16.2 
           az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }}  \
-            --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' --force \
+            --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' 
             
