--- a/.github/workflows/reusablePublishWorkflow.yml
+++ b/.github/workflows/reusablePublishWorkflow.yml
@@ -59,7 +59,8 @@ jobs:
         inlineScript: |      
           az config set bicep.use_binary_from_path=False.
           az bicep install
-          az bicep publish --force \
+          az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }}  \
             --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' \
+            --force \
             
