--- a/.github/workflows/reusablePublishWorkflow.yml
+++ b/.github/workflows/reusablePublishWorkflow.yml
@@ -57,9 +57,9 @@ jobs:
       name: Publish web app module with latest tag 
       with:
         inlineScript: |      
+          az upgrade \
           az config set bicep.use_binary_from_path=False.
-          az upgrade
-          az bicep install
+          az bicep install \
           az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }}  \
             --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' --force
