--- a/.github/workflows/reusablePublishWorkflow.yml
+++ b/.github/workflows/reusablePublishWorkflow.yml
@@ -57,8 +57,8 @@ jobs:
       name: Publish web app module with latest tag 
       with:
         inlineScript: |      
-          az upgrade \
           az config set bicep.use_binary_from_path=False.
+          az upgrade
           az bicep install \
           az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }}  \
