--- a/.github/workflows/reusablePublishWorkflow.yml
+++ b/.github/workflows/reusablePublishWorkflow.yml
@@ -44,7 +44,7 @@ jobs:
         majorMinorVersionNumber=$(jq '(.version.major | tostring) + "." + (.version.minor | tostring)' ${{ inputs.MODULE_METADATA_FILE_PATH }} -r )
         versionNumber="$majorMinorVersionNumber.${{ github.run_number }}"
         echo "MODULE_VERSION=$versionNumber" >> $GITHUB_ENV
-    - uses: azure/cli@v1
+    - uses: azure/cli@v2
       name: Publish web app module with version tag
       with:
         inlineScript: |
@@ -53,13 +53,12 @@ jobs:
           az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }} \
             --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:${{ env.MODULE_VERSION }}' 
-    - uses: azure/cli@v1
+    - uses: azure/cli@v2
       name: Publish web app module with latest tag 
       with:
         inlineScript: |      
           az config set bicep.use_binary_from_path=False.
-          az upgrade
-          az bicep install \
+          az bicep install 
           az bicep publish \
             --file ${{ inputs.MODULE_FILE_PATH }}  \
             --target 'br:${{ inputs.MODULE_REGISTRY_SERVER }}/${{ inputs.MODULE_NAME }}:latest' --force
